--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':question2', ':question3', ':question4'
+include ':question1', ':question2', ':question3', ':question4', ':question5'
